--- a/README.rdoc
+++ b/README.rdoc
@@ -1,7 +1,7 @@
 == Pathfounder
-= A Character Generator for the Pathfinder RPG system
-
 {<img src="https://codeclimate.com/github/alxjrvs/Pathfounder/badges/gpa.svg" />}[https://codeclimate.com/github/alxjrvs/Pathfounder]
+{<img src="https://codeclimate.com/github/alxjrvs/Pathfounder/badges/coverage.svg" />}[https://codeclimate.com/github/alxjrvs/Pathfounder]
+= A Character Generator for the Pathfinder RPG system
 
 == The Architecture
 Pathfounder weaves two sets of data together in a contextual and accessible way in Ruby
